fix spacing

--- a/src/app/modules/newsfeed/feeds/subscribed.component.ng.scss
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.ng.scss
@@ -5,11 +5,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-bottom: $minds-padding * 2;
+    padding-bottom: $minds-padding * 3;
 
     .m-newsfeed__subscribed__feedType__title {
-      font-size: 16px;
-      font-weight: 500;
+      font-size: 18px;
+      font-weight: bold;
       position: relative;
       top: 2px;
     }
